Don't repeat thead if the first row exceeds the height of the page

BUG=669690
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2545243002
Cr-Commit-Position: refs/heads/master@{#438084}

Former-commit-id: 6287f21e89cc890abab98237d7b1a0d51f649221