third_party/WebKit/Source/core/layout/LayoutState.h
@@ -84,13 +84,6 @@ class LayoutState {
   LayoutUnit pageLogicalOffset(const LayoutBox&,
                                const LayoutUnit& childLogicalOffset) const;
 
-  LayoutUnit heightOffsetForTableHeaders() const {
-    return m_heightOffsetForTableHeaders;
-  };
-  void setHeightOffsetForTableHeaders(LayoutUnit offset) {
-    m_heightOffsetForTableHeaders = offset;
-  };
-
   const LayoutSize& paginationOffset() const { return m_paginationOffset; }
   bool containingBlockLogicalWidthChanged() const {
     return m_containingBlockLogicalWidthChanged;
@@ -120,10 +113,6 @@ class LayoutState {
   // x/y offset from the logical top / start of the first page. Does not include
   // relative positioning or scroll offsets.
   LayoutSize m_paginationOffset;
-
-  // The height we need to make available for repeating table headers in
-  // paginated layout.
-  LayoutUnit m_heightOffsetForTableHeaders;
 
   LayoutObject& m_layoutObject;
 };
